--- a/Presentation/Safari.UI.Process/Safari.UI.Process.csproj
+++ b/Presentation/Safari.UI.Process/Safari.UI.Process.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EspecieProcess.cs" />
     <Compile Include="MediaType.cs" />
     <Compile Include="ProcessComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -69,6 +70,10 @@
     <ProjectReference Include="..\..\Services\Safari.Services.Contracts\Safari.Services.Contracts.csproj">
       <Project>{AED38724-3F4A-4128-8843-E65D4D821B41}</Project>
       <Name>Safari.Services.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Services\Safari.Services\Safari.Services.csproj">
+      <Project>{C1742601-B74E-492E-9465-C4465D9AE02D}</Project>
+      <Name>Safari.Services</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Shared\Safari.Entities\Safari.Entities.csproj">
       <Project>{DED5F661-C299-47EB-AE50-B64BE8FEEBC9}</Project>
