--- a/Business/Safari.Business/Safari.Business.csproj
+++ b/Business/Safari.Business/Safari.Business.csproj
@@ -39,8 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClienteComponent.cs" />
     <Compile Include="EspecieComponent.cs" />
+    <Compile Include="MascotaComponent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalaComponent.cs" />
+    <Compile Include="TipoMovimientoComponent.cs" />
+    <Compile Include="TipoServicioComponent.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Data\Safari.Data\Safari.Data.csproj">
