--- a/Shared/Safari.Entities/Safari.Entities.csproj
+++ b/Shared/Safari.Entities/Safari.Entities.csproj
@@ -39,9 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cliente.cs" />
     <Compile Include="Especie.cs" />
     <Compile Include="IEntity.cs" />
+    <Compile Include="Mascota.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sala.cs" />
+    <Compile Include="TipoMovimiento.cs" />
+    <Compile Include="TipoServicio.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
